--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                 </script>
 
                 <div class="btns">
-                    <a href="https://drive.google.com/file/d/1p16KLeqTEMtPXl-gJi7gObl9kpcJXr5E/view?usp=drive_link"
+                    <a href="https://drive.google.com/file/d/1_RGHIi035kWuSKHhsFKQsEyFHZzDertc/view?usp=drive_link"
                         target="_blank" class="btn">Resume</a>
                     <a href="#contact" class="btn">Contact Me</a>
                 </div>
@@ -347,11 +347,12 @@
         <div class="experience">
             <h3 style="margin-top: 10%;">My Experience</h3>
             <div class="list">
-                 <div class="list1">
+                <div class="list1">
                     <div class="objects">
                         <div class="obj" data-title="" data-type="">
                             <a href="https://www.sharjahairport.ae/en/" target="_blank">
-                                <img src="./Sharjah_Airport_logo.svg.png" alt="Sharjah Airport" style="width: 100%; height: 138px;">
+                                <img src="./Sharjah_Airport_logo.svg.png" alt="Sharjah Airport"
+                                    style="width: 100%; height: 138px;">
                             </a>
                         </div>
                     </div>
@@ -361,19 +362,23 @@
                             onmouseout="this.style.textDecoration='none';">
                             <a href="https://www.sharjahairport.ae/en/" target="_blank"
                                 style="text-decoration: none; color: inherit;">
-                                Application Support Engineer - Sharjah Airport, UAE
+                                Application Support Engineer - Sharjah Airport - (Alpha Data PJSC), UAE
                             </a>
                         </h4>
                         <ul class="skill-bullets">
-                            <li>Monitor airport operational systems such as Flight Information Display Systems (FIDS), Airport Operational Database (AODB), Baggage Handling Systems (BHS) software, and Passenger Processing Systems.</li>
-                            <li>Respond to application issues raised by airport staff, operations team, and stakeholders.</li>
-                            <li>Troubleshoot application errors, analyze root causes, and escalate to vendors when required.
-                            </li>
-                            <li>Maintain incident logs and ensure timely resolution based on SLAs.</li>
-                            <li>Support configuration changes, software updates, and patches for operational systems.</li>
-                            <li>Maintain detailed SOPs, user guides, technical documentation, and change management records.</li>
-                            <li>Provide on-call or shift-based support to maintain high system availability.</li>
-                            <li>Ensure smooth functioning of all airport applications during peak operations.</li>
+                            <li>Provide end-to-end application support for 60+ airport applications.</li>
+                            <li>Handle incidents, service requests, and user access/role management using ManageEngine
+                                ITSM and AD Manager Plus.</li>
+                            <li>Maintain and troubleshoot Oracle-based applications including PL/SQL procedures, Oracle
+                                Forms, and backend components, and support PHP and ASP.NET MVC / C# applications, including bug fixing,
+                                performance monitoring, and updates.</li>
+                            <li>Monitor critical airport systems such as FIDS, AODB, Passenger Processing Systems,
+                                APIs, logs, batch jobs.</li>
+                            <li>Respond to application issues raised by airport operations teams
+                                performing root cause analysis.</li>
+                            <li>Coordinate with vendors, airport authorities, and internal IT teams to resolve critical
+                                production incidents within SLAs & Support configuration changes, software patches, and releases while maintaining SOPs,
+                                documentation, and change records.</li>
                         </ul>
 
                     </div>
